--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,6 +13,7 @@ install:
   - java -jar ./artifacts/app-mbank.jar &
 
 build_script:
+  - - chmod +x gradlew
   - ./gradlew test --info
-  - chmod +x gradlew
+
 
