--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,8 +13,10 @@ install:
   - java -jar ./artifacts/app-mbank.jar &
 
 build_script:
+  -
+    - chmod +x gradlew
+     - ./gradlew test --info
 
 
-  - ./gradlew test --info
 
 
