--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,7 @@ stack: jdk 11  # версия JDK
 
 branches:
   only:
-    - main  # ветка git
+    - master  # ветка git
 
 build: off  # будем использовать свой скрипт сборки
 
@@ -13,9 +13,7 @@ install:
   - java -jar ./artifacts/app-mbank.jar &
 
 build_script:
-  -
-    - chmod +x gradlew
-     - ./gradlew test --info
+  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
 
 
 
